--- a/androidnetworkingservicemnv_expo/app/src/main/AndroidManifest.xml
+++ b/androidnetworkingservicemnv_expo/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.ArithmeticActivity" android:configChanges="orientation|screenSize"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="ArithmeticActivity"/>
                 <category android:name="android.intent.category.DEFAULT"/>
