- Renamed jar file - Removed cueSettingProperty -> when a cue is set by the user, we start the interruption. - instead of the rect, the relative center position of the edit button is sent

--- a/kotlin-tornadofx-gradlemnv/build.gradle
+++ b/kotlin-tornadofx-gradlemnv/build.gradle
@@ -13,7 +13,7 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.web', 'javafx.media']
 }
 
-def artifactName = 'MpmGame'
+def artifactName = 'Hololag'
 group 'cerg.mpmgame'
 version '0.5.5'
 
@@ -94,7 +94,7 @@ task menu(type: Jar, dependsOn: jar) {
         attributes 'Implementation-Title': getDate()
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveName = "${artifactName}-menu-${version}.${extension}"
+    archiveName = "${artifactName}-Server-${version}.${extension}"
     from { configurations.compileClasspath.findAll().collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
